--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "chart.js": "2.8.0",
     "history": "4.9.0",
     "html-react-parser": "^0.13.0",
+    "http-proxy-middleware": "^1.0.5",
     "node-sass": "4.12.0",
     "perfect-scrollbar": "1.4.0",
     "react": "16.8.6",
@@ -57,5 +58,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://localhost:8000"
 }
