--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mysql2": "^2.1.0",
     "nodemailer": "^6.4.10",
     "nodemon": "^2.0.4",
+    "path": "^0.12.7",
     "sequelize": "^5.21.9"
   }
 }
